titanicapi/manifests/api-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: titanic-ns
  name: titanicapi-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: titanicapi
