titanicapi/manifests/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: titanic-ns
  name: titanicapi-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: titanicapi-service
              port: 
                number: 80
